RESOLVED FIXED68730
[Chromium] REGRESSION (r95725): Resizing a window doesn't resize the contents
https://bugs.webkit.org/show_bug.cgi?id=68730
Summary [Chromium] REGRESSION (r95725): Resizing a window doesn't resize the contents
Mihai Parparita
Reported 2011-09-23 14:31:55 PDT
[Chromium] REGRESSION (r95725): Resizing a window doesn't resize the contents
Attachments
Patch (4.36 KB, patch)
2011-09-23 14:34 PDT, Mihai Parparita
no flags
Mihai Parparita
Comment 1 2011-09-23 14:34:29 PDT
James Robinson
Comment 2 2011-09-23 18:14:38 PDT
Comment on attachment 108538 [details] Patch R=me. I'd like to understand why this is needed by some ports and not others, if anyone has time to investigate.
WebKit Review Bot
Comment 3 2011-09-23 20:11:44 PDT
Comment on attachment 108538 [details] Patch Clearing flags on attachment: 108538 Committed r95897: <http://trac.webkit.org/changeset/95897>
WebKit Review Bot
Comment 4 2011-09-23 20:11:48 PDT
All reviewed patches have been landed. Closing bug.
Alexey Proskuryakov
Comment 5 2011-09-29 10:51:47 PDT
The bug has [Chromium] in title, but the patch changes cross-platform code. Please don't do that.
Note You need to log in before you can comment on or make changes to this bug.