[Chromium] REGRESSION (r95725): Resizing a window doesn't resize the contents https://bugs.webkit.org/show_bug.cgi?id=68730

Reviewed by James Robinson.

Source/WebCore:

Adds a missing contentsResized() call in ScrollView::setFrameRect.

Test: fast/dom/Window/window-resize-contents.html

* platform/ScrollView.cpp:
(WebCore::ScrollView::setFrameRect):

LayoutTests:

Test for resizing of the window triggering resizing of contents.

* fast/dom/Window/window-resize-contents-expected.txt: Added.
* fast/dom/Window/window-resize-contents.html: Added.


git-svn-id: svn://svn.chromium.org/blink/trunk@95897 bbb929c8-8fbe-4397-9dbb-9b2b20218538