third_party/WebKit/Source/WebCore/platform/ScrollView.cpp
@@ -828,6 +828,9 @@ void ScrollView::setFrameRect(const IntRect& newRect)
     frameRectsChanged();
 
     updateScrollbars(scrollOffset());
+    
+    if (!m_useFixedLayout)
+        contentsResized();
 }
 
 void ScrollView::frameRectsChanged()
